exam02/2-0-ft_strrev.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1z2r2p11.42.us.org
Darwin 17.2.0 x86_64
$> date
Fri Jan 24 20:08:20 PST 2020
$> gcc --version
Configured with: --prefix=/Library/Developer/CommandLineTools/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.38)
Target: x86_64-apple-darwin17.2.0
Thread model: posix
InstalledDir: /Library/Developer/CommandLineTools/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2020/piscine-c-exam02/exam_20200125/tri

= Git history ==================================================================
$> git -C /var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user log --pretty='%H - %an, %ad : %s'
814cb2f3df68354bbe9a94130c82f3304703818a - Exam 42, Fri Jan 24 20:07:54 2020 -0800 : 2-0
8910a0ff4d4e0b2d79dada259af1192a1b4b9451 - Exam 42, Fri Jan 24 18:37:53 2020 -0800 : 1-0
5a3ff613f4ffdd437472505cd3be4a786e4de69b - Exam 42, Fri Jan 24 18:23:12 2020 -0800 : 0-1
314f2707c69995c8706f2fddba16f82aa499b7a9 - Exam 42, Fri Jan 24 18:13:01 2020 -0800 : 0-0
 
= Collected files ==========================================
$> ls -lAR /var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user
total 8
-rw-r--r--  1 deepthought  deepthought  899 Jan 24 20:08 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Jan 24 20:08 ft_countdown
drwxr-xr-x  3 deepthought  deepthought  102 Jan 24 20:08 ft_strrev
drwxr-xr-x  3 deepthought  deepthought  102 Jan 24 20:08 hello
drwxr-xr-x  3 deepthought  deepthought  102 Jan 24 20:08 rev_print

/var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user/ft_countdown:
total 8
-rw-r--r--  1 deepthought  deepthought  976 Jan 24 20:08 ft_countdown.c

/var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user/ft_strrev:
total 8
-rw-r--r--  1 deepthought  deepthought  1124 Jan 24 20:08 ft_strrev.c

/var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  966 Jan 24 20:08 hello.c

/var/folders/dr/ffg3p4l52xj6q_05nl56fqgw0000gp/T/tmpH_lt4n/user/rev_print:
total 8
-rw-r--r--  1 deepthought  deepthought  1154 Jan 24 20:08 rev_print.c
 
= ft_strrev ====================================================================
$> gcc -Wextra -Wall -Werror ft_strrev.c main.c -o user_exe 
ft_strrev.c:19:3: error: variable 'rev' is uninitialized when used here [-Werror,-Wuninitialized]
        *rev = temp;
         ^~~
ft_strrev.c:17:11: note: initialize the variable 'rev' to silence this warning
        char *rev;
                 ^
                  = 0
ft_strrev.c:19:9: error: variable 'temp' is uninitialized when used here [-Werror,-Wuninitialized]
        *rev = temp;
               ^~~~
ft_strrev.c:18:11: note: initialize the variable 'temp' to silence this warning
        char temp;
                 ^
                  = '\0'
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
